; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/subdev/vm/extr_base.c_nouveau_vm_new.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/subdev/vm/extr_base.c_nouveau_vm_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nouveau_device = type { i32 }
%struct.nouveau_vm = type { i32 }
%struct.nouveau_vmmgr = type { i32 (%struct.nouveau_vmmgr*, i32, i32, i32, %struct.nouveau_vm.0**)* }
%struct.nouveau_vm.0 = type opaque

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nouveau_vm_new(%struct.nouveau_device* %0, i32 %1, i32 %2, i32 %3, %struct.nouveau_vm** %4) #0 {
  %6 = alloca %struct.nouveau_device*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.nouveau_vm**, align 8
  %11 = alloca %struct.nouveau_vmmgr*, align 8
  store %struct.nouveau_device* %0, %struct.nouveau_device** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store %struct.nouveau_vm** %4, %struct.nouveau_vm*** %10, align 8
  %12 = load %struct.nouveau_device*, %struct.nouveau_device** %6, align 8
  %13 = call %struct.nouveau_vmmgr* @nouveau_vmmgr(%struct.nouveau_device* %12)
  store %struct.nouveau_vmmgr* %13, %struct.nouveau_vmmgr** %11, align 8
  %14 = load %struct.nouveau_vmmgr*, %struct.nouveau_vmmgr** %11, align 8
  %15 = getelementptr inbounds %struct.nouveau_vmmgr, %struct.nouveau_vmmgr* %14, i32 0, i32 0
  %16 = load i32 (%struct.nouveau_vmmgr*, i32, i32, i32, %struct.nouveau_vm.0**)*, i32 (%struct.nouveau_vmmgr*, i32, i32, i32, %struct.nouveau_vm.0**)** %15, align 8
  %17 = load %struct.nouveau_vmmgr*, %struct.nouveau_vmmgr** %11, align 8
  %18 = load i32, i32* %7, align 4
  %19 = load i32, i32* %8, align 4
  %20 = load i32, i32* %9, align 4
  %21 = load %struct.nouveau_vm**, %struct.nouveau_vm*** %10, align 8
  %22 = bitcast %struct.nouveau_vm** %21 to %struct.nouveau_vm.0**
  %23 = call i32 %16(%struct.nouveau_vmmgr* %17, i32 %18, i32 %19, i32 %20, %struct.nouveau_vm.0** %22)
  ret i32 %23
}

declare dso_local %struct.nouveau_vmmgr* @nouveau_vmmgr(%struct.nouveau_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
